--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1040,7 +1040,7 @@ main {
 }
 
 .proj-skills-item {
-  position: relative;
+  position: static;
   background: var(--border-gradient-onyx);
   padding: 20px;
   border-radius: 14px;
@@ -1054,7 +1054,7 @@ main {
   inset: 1px;
   background: var(--bg-gradient-jet);
   border-radius: inherit;
-  z-index: -1;
+  z-index: 0;
 }
 
 .proj-skills-icon-box { margin-bottom: 10px; }
