--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1040,7 +1040,7 @@ main {
 }
 
 .proj-skills-item {
-  position: static;
+  position: relative;
   background: var(--border-gradient-onyx);
   padding: 20px;
   border-radius: 14px;
