--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1046,7 +1046,7 @@ main {
   border-radius: 14px;
   box-shadow: var(--shadow-2);
   z-index: 1;
-  margin: 20px auto;
+  margin: 20px;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 20px;
@@ -1062,9 +1062,7 @@ main {
   z-index: -1;
 }
 
-.proj-skills-icon-box {
-  margin-right: 20px;
-  margin-bottom: 10px; }
+.proj-skills-icon-box { padding: 10px; }
 
 .proj-skills-icon-box img { 
   display: block;
