--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,8 +1081,8 @@ textarea.form-input::-webkit-resizer { display: none; }
 .pdf-btn {
   position: relative;
   width: 200px;
-  background: var(--orange-yellow-crayola);
-  color: black;
+  background: var(--border-gradient-onyx);
+  color: var(--orange-yellow-crayola);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1100,7 +1100,7 @@ textarea.form-input::-webkit-resizer { display: none; }
   content: "";
   position: absolute;
   inset: 1px;
-  background: var(--orange-yellow-crayola);
+  background: var(--bg-gradient-jet);
   border-radius: inherit;
   z-index: -1;
   transition: var(--transition-1);
